--- a/nyt-article-recreation-marshfield-dev-ver.Rmd
+++ b/nyt-article-recreation-marshfield-dev-ver.Rmd
@@ -100,9 +100,9 @@ plot_data <-
   marshfield %>% 
   mutate(county.state = paste0(county,", ",state)) %>% 
   group_by(county.state) %>% 
+  arrange(desc(date)) %>% 
+  mutate(cases = cummin(cases)) %>% 
   arrange(date) %>% 
-  mutate(cum.max.cases = cummax(cases),
-         cases = ifelse(cases < cum.max.cases, cum.max.cases, cases)) %>% 
   mutate(daily.change = (cases / lag(cases, n = window, default = NA))^(1 / window) - 1 ) %>% 
   ungroup() %>% 
   mutate(`Average Daily Change` = daily.change,
@@ -161,9 +161,9 @@ plot_data <-
   left_join(county_population, by = c("state", "county")) %>% 
   mutate(county.state = paste0(county,", ",state)) %>% 
   group_by(county.state) %>% 
+  arrange(desc(date)) %>% 
+  mutate(cases = cummin(cases)) %>% 
   arrange(date) %>% 
-  mutate(cum.max.cases = cummax(cases),
-         cases = ifelse(cases < cum.max.cases, cum.max.cases, cases)) %>% 
   mutate(daily.change = (cases / lag(cases, n = window, default = NA))^(1 / window) - 1 ) %>% 
   ungroup() %>% 
   mutate(`Confirmed Cases Per Thousand People` = cases / population * 1000) %>% 
@@ -242,9 +242,9 @@ plot_data <-
   left_join(county_population, by = c("state", "county")) %>% 
   mutate(county.state = paste0(county,", ",state)) %>% 
   group_by(county.state) %>% 
+  arrange(desc(date)) %>% 
+  mutate(cases = cummin(cases)) %>% 
   arrange(date) %>% 
-  mutate(cum.max.cases = cummax(cases),
-         cases = ifelse(cases < cum.max.cases, cum.max.cases, cases)) %>% 
   mutate(new.cases = cases - lag(cases, 
                                  default = cases[1]),
          new.cases = ifelse(new.cases < 0, 0, new.cases),
@@ -297,9 +297,9 @@ plot_data <-
   left_join(county_population, by = c("state", "county")) %>% 
   mutate(county.state = paste0(county,", ",state)) %>% 
   group_by(county.state) %>% 
+  arrange(desc(date)) %>% 
+  mutate(cases = cummin(cases)) %>% 
   arrange(date) %>% 
-  mutate(cum.max.cases = cummax(cases),
-         cases = ifelse(cases < cum.max.cases, cum.max.cases, cases)) %>% 
   mutate(new.cases = cases - lag(cases, 
                                  default = cases[1]),
          new.cases = ifelse(new.cases < 0, 0, new.cases),
