--- a/nyt-article-recreation-marshfield.Rmd
+++ b/nyt-article-recreation-marshfield.Rmd
@@ -98,6 +98,8 @@ plot_data <-
   marshfield %>% 
   mutate(county.state = paste0(county,", ",state)) %>% 
   group_by(county.state) %>% 
+  arrange(desc(date)) %>% 
+  mutate(cases = cummin(cases)) %>% 
   arrange(date) %>% 
   mutate(daily.change = (cases / lag(cases, n = 7, default = NA))^(1 / 7) - 1 ) %>% 
   ungroup() %>% 
@@ -154,6 +156,8 @@ plot_data <-
   left_join(county_population, by = c("state", "county")) %>% 
   mutate(county.state = paste0(county,", ",state)) %>% 
   group_by(county.state) %>% 
+  arrange(desc(date)) %>% 
+  mutate(cases = cummin(cases)) %>% 
   arrange(date) %>% 
   mutate(daily.change = (cases / lag(cases, n = 7, default = NA))^(1 / 7) - 1 ) %>% 
   ungroup() %>% 
@@ -205,10 +209,12 @@ plot_data <-
   left_join(county_population, by = c("state", "county")) %>% 
   mutate(county.state = paste0(county,", ",state)) %>% 
   group_by(county.state) %>% 
+  arrange(desc(date)) %>% 
+  mutate(cases = cummin(cases)) %>% 
   arrange(date) %>% 
   mutate(new.cases = cases - lag(cases, 
                                  default = cases[1]),
-         new.cases = ifelse(new.cases < 0, 0, new.cases),
+         # new.cases = ifelse(new.cases < 0, 0, new.cases),
          roll.cases = rollapply(new.cases, 
                                 list(-(0:6)), 
                                 sum, 
@@ -258,10 +264,12 @@ plot_data <-
   left_join(county_population, by = c("state", "county")) %>% 
   mutate(county.state = paste0(county,", ",state)) %>% 
   group_by(county.state) %>% 
+  arrange(desc(date)) %>% 
+  mutate(cases = cummin(cases)) %>% 
   arrange(date) %>% 
   mutate(new.cases = cases - lag(cases, 
                                  default = cases[1]),
-         new.cases = ifelse(new.cases < 0, 0, new.cases),
+         # new.cases = ifelse(new.cases < 0, 0, new.cases),
          roll.cases = rollapply(new.cases, 
                                 list(-(0:6)), 
                                 sum, 
