--- a/nyt-article-recreation-marshfield-dev-ver.Rmd
+++ b/nyt-article-recreation-marshfield-dev-ver.Rmd
@@ -113,19 +113,61 @@ plot_data <-
          Cases = cases) %>% 
   filter(between(Date, MIN_DATE, MAX_DATE))
 
-fig1 <- plot_ly(data = plot_data,
-               x = ~Date,
-               y = ~`Average Daily Change`,
-               color = ~Name,
-               text = ~paste0("</br>", Name,
-                             "</br>", Date,
-                             "</br>Daily Change: ", scales::percent(daily.change, accuracy = 0.1),
-                             "</br>Doubling Time: ", round(`Doubling Time`, 3), " days"),
-               type = "scatter",
-               mode = 'lines+markers',
-               colors = "Paired",
-               alpha = 0.7,
-               hoverinfo = "text") %>% 
+plot_data_top_10 <- 
+  plot_data %>% 
+  group_by(Date) %>% 
+  mutate(Rank = rank(-daily.change)) %>% 
+  ungroup() %>% 
+  group_by(Name) %>% 
+  arrange(Date) %>% 
+  # filter(last(daily.change) >= 0.05) %>% 
+  filter(last(Rank) <= 10) %>% 
+  ungroup()
+
+plot_data_bottom_n <- 
+  plot_data %>% 
+  group_by(Date) %>% 
+  mutate(Rank = rank(-daily.change)) %>% 
+  ungroup() %>% 
+  group_by(Name) %>% 
+  arrange(Date) %>% 
+  # filter(last(daily.change) >= 0.05) %>% 
+  filter(last(Rank) > 10) %>% 
+  ungroup()
+
+fig1 <- 
+  plot_ly(data = plot_data_top_10,
+          x = ~Date,
+          y = ~`Average Daily Change`,
+          color = ~Name,
+          text = ~paste0("</br>", Name,
+                         "</br>", Date,
+                         "</br>Daily Change: ", scales::percent(daily.change, accuracy = 0.1),
+                         "</br>Doubling Time: ", round(`Doubling Time`, 3), " days"),
+          type = "scatter",
+          mode = 'lines+markers',
+          colors = "Paired",
+          alpha = 0.7,
+          hoverinfo = "text") %>% 
+  layout(title = "") %>% 
+  layout(xaxis = list(title = "Date"),
+         yaxis = list(title = paste0("Average Daily Change (Last ", window, " Days)"),
+                      # range = c(0, 1),
+                      tickformat = "%")) %>% 
+  add_trace(data = plot_data_bottom_n,
+            x = ~Date,
+            y = ~`Average Daily Change`,
+            color = ~Name,
+            text = ~paste0("</br>", Name,
+                           "</br>", Date,
+                           "</br>Daily Change: ", scales::percent(daily.change, accuracy = 0.1),
+                           "</br>Doubling Time: ", round(`Doubling Time`, 3), " days"),
+            type = "scatter",
+            mode = 'lines+markers',
+            colors = "Paired",
+            alpha = 0.7,
+            hoverinfo = "text",
+            visible = "legendonly") %>% 
   layout(title = "") %>% 
   layout(xaxis = list(title = "Date"),
          yaxis = list(title = paste0("Average Daily Change (Last ", window, " Days)"),
@@ -175,7 +217,29 @@ plot_data <-
          Cases = cases) %>% 
   filter(between(Date, MIN_DATE, MAX_DATE))
 
-fig2 <- plot_ly(data = plot_data,
+plot_data_top_10 <- 
+  plot_data %>% 
+  group_by(Date) %>% 
+  mutate(Rank = rank(-daily.change)) %>% 
+  ungroup() %>% 
+  group_by(Name) %>% 
+  arrange(Date) %>% 
+  # filter(last(daily.change) >= 0.05) %>% 
+  filter(last(Rank) <= 10) %>% 
+  ungroup()
+
+plot_data_bottom_n <- 
+  plot_data %>% 
+  group_by(Date) %>% 
+  mutate(Rank = rank(-daily.change)) %>% 
+  ungroup() %>% 
+  group_by(Name) %>% 
+  arrange(Date) %>% 
+  # filter(last(daily.change) >= 0.05) %>% 
+  filter(last(Rank) > 10) %>% 
+  ungroup()
+
+fig2 <- plot_ly(data = plot_data_top_10,
                x = ~`Confirmed Cases Per Thousand People`,
                y = ~`Average Daily Change`,
                color = ~Name,
@@ -190,6 +254,27 @@ fig2 <- plot_ly(data = plot_data,
                colors = "Paired",
                # alpha = 0.5,
                hoverinfo = "text") %>% 
+  layout(title = "") %>% 
+  layout(xaxis = list(title = "Confirmed Cases Per Thousand People"),
+         yaxis = list(title = paste0("Average Daily Change (Last ", window, " Days)"),
+                      # range = c(0, 1),
+                      tickformat = "%")) %>% 
+  add_trace(data = plot_data_bottom_n,
+            x = ~`Confirmed Cases Per Thousand People`,
+            y = ~`Average Daily Change`,
+            color = ~Name,
+            text = ~paste0("</br>", Name,
+                           "</br>", Date,
+                           "</br>Cases Per Thousand: ", 
+                           round(`Confirmed Cases Per Thousand People`, 3), 
+                           "</br>Daily Change: ", scales::percent(daily.change, accuracy = 0.1),
+                           "</br>Doubling Time: ", round(`Doubling Time`, 3), " days"),
+            type = "scatter",
+            mode = 'lines+markers',
+            colors = "Paired",
+            # alpha = 0.5,
+            hoverinfo = "text",
+            visible = "legendonly") %>% 
   layout(title = "") %>% 
   layout(xaxis = list(title = "Confirmed Cases Per Thousand People"),
          yaxis = list(title = paste0("Average Daily Change (Last ", window, " Days)"),
